improved unit test for trainee service